# MediGuide

./: .gitignore  CONTRIBUTING.md  README.md
AI/: main.py  pyproject.toml  test-data.xlsx
AI/chroma_db_fixed/: chroma.sqlite3
AI/src/mediguide_rag/: ingest.py  rag_pipeline.py  test-data2.xlsx
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/components/: ChatInput.jsx  MarkdownRenderer.jsx  Sidebar.jsx
frontend/services/: geminiService.js  watsonxService.js
frontend/src/: App.jsx  main.jsx
